<resources>
    <string name="app_name">Layout</string>
    <string name="hi">Hi, there!</string>
    <string name="secondP">Lets get you set up and started</string>
    <string name="or">---------- or ----------</string>
    <string name="google">Sign in with Google</string>
    <string name="continueB">Continue</string>
    <string name="name">Enter your name</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="skip">SKIP</string>
    <string name="here">We are almost there. Hang tight</string>
    <string name="location">Enter your city or zipcode</string>
    <string name="birth">Enter your date of bith</string>
    <string name="back">Back</string>
    <string name="time">Time to personalize for your needs</string>
    <string name="theaters">Theaters near you</string>
    <string name="select">Select your preferred locations</string>
    <string name="search">Search by theater name</string>
    <string name="finish">Finish</string>
    <string name="amc">AMC Fullerton Dine-In</string>
    <string name="my_location">LOCATION</string>
    <string name="terrain">TERRAIN</string>
    <string name="search2">SEARCH</string>
    <string name="exit">EXIT</string>
</resources>
