<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/thirdColor"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star_black_24dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondP"
        android:textSize="20dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/fourthColor"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:hint="@string/name"
        android:background="@drawable/input"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:hint="@string/email"
        android:background="@drawable/input"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:hint="@string/password"
        android:background="@drawable/input"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="20dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/google"
        android:padding="15dp"
        android:background="@drawable/continue_b"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_radio_button_unchecked_black_24dp"
        android:drawablePadding="15dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/continue_b"
        android:textColor="@color/thirdColor"
        android:text="@string/continueB"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>