<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_location"
                    android:textColor="@color/fourthColor"
                    android:textSize="25dp"/>
                <ImageView
                    android:id="@+id/img_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_my_location_black_24dp"
                    android:layout_below="@id/location"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:id="@+id/terrain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terrain"
                    android:textColor="@color/fourthColor"
                    android:textSize="25dp"/>
                <ImageView
                    android:id="@+id/img_terrain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_terrain_black_24dp"
                    android:layout_below="@id/terrain"/>
            </RelativeLayout>
        </TableRow>
        <TableRow android:layout_weight="2"></TableRow>
        <TableRow
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:id="@+id/search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search2"
                    android:textColor="@color/fourthColor"
                    android:textSize="25dp"/>
                <ImageView
                    android:id="@+id/img_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search_black_24dp"
                    android:layout_below="@id/search"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:id="@+id/exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exit"
                    android:textColor="@color/fourthColor"
                    android:textSize="25dp"/>
                <ImageView
                    android:id="@+id/img_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_forward_black_24dp"
                    android:layout_below="@id/exit" />
            </RelativeLayout>
        </TableRow>
    </TableLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_wb_sunny_black_24dp"
        android:layout_gravity="center" />
</FrameLayout>